k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
      - name: ghcr-secret

      containers:
      - name: backend
        image: ghcr.io/user01377/kevryx-backend:latest
        ports:
        - containerPort: 8000
