k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: ghcr-secret

      containers:
      - name: frontend
        image: ghcr.io/user01377/kevryx-frontend:latest
        ports:
        - containerPort: 80
