k8s/kevryx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kevryx
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
