k8s/kevryx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kevryx
spec:
  rules:
  - host: getkevryx.tail837acd.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
